[package]
name = "stream_pay_core"
version = "0.1.0"
authors = ["StreamDAO <https://streamdao.org>"
edition = "2022"
description = "Core utilities used by the StreamPay App"
repository = "https://github.com/streamdao/stream-pay-core"
readme = "README.md"
homepage = "https://streamdao.org"
keywords = ["solana"]
license = "MIT OR Apache-2.0"

[dependencies]
# Any version > 1.9.5 (currently unreleased) should compile on Android/iOS targets.
# v1.9.x is not officially supported for mainnet yet, but this version works for required functionality.
solana-client = { git="https://github.com/solana-labs/solana", rev="1240217a7300ab0fe4b399cb2231cbea599e9cbc" }
solana-program = { git="https://github.com/solana-labs/solana", rev="1240217a7300ab0fe4b399cb2231cbea599e9cbc" }
solana-sdk = { git="https://github.com/solana-labs/solana", rev="1240217a7300ab0fe4b399cb2231cbea599e9cbc" }
solana-transaction-status = { git="https://github.com/solana-labs/solana", rev="1240217a7300ab0fe4b399cb2231cbea599e9cbc" }
spl-memo = { version = "=3.0.1", features = ["no-entrypoint"] }
thiserror = "1.0.30"

[dev-dependencies]
serde = "1.0"
serde_json = "1.0"
once_cell = "1.10"
